tests/agl/rejections/parse/def_missing_return_type.agl
def double(n: int): n * 2
